# AdamOpt

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
src/adamopt/: __init__.py  cli.py  content_locker.py  freq_table.py  frequency.py  optimizer.py  stopwords.py  tfd.py  tokenizer.py
tests/: test_cli.py  test_content_locker.py  test_frequency.py  test_optimizer.py  test_stopwords.py  test_tfd.py  test_tokenizer.py
