[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adamopt"
version = "0.1.0"
description = "Automatic text frequency optimization for LLMs based on Adam's Law (Textual Frequency Law)."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
authors = [
    {name = "AdamOpt Contributors"},
]
keywords = ["llm", "prompt-optimization", "text-frequency", "adams-law", "nlp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "wordfreq>=3.0.0",
    "jieba>=0.42.0",
    "numpy>=1.24.0",
    "click>=8.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
adamopt = "adamopt.cli:main"

[project.urls]
Homepage = "https://github.com/happyii/adamopt"
Repository = "https://github.com/happyii/adamopt"
Issues = "https://github.com/happyii/adamopt/issues"
Documentation = "https://github.com/happyii/adamopt#readme"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP"]
ignore = ["D100", "D104"]

[tool.pytest.ini_options]
testpaths = ["tests"]
